<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/HDB"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="HaiDengBerg Network Systems Workshop"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"/>

    <Button android:id="@+id/btnHDB"
        android:gravity="center"
        android:layout_width="90dp"
        android:layout_height="76dp"
        android:layout_marginStart="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/hdb"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/colorPressedHighlight"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:rippleColor="#C6D535"/>

    <Button
        android:id="@+id/btnOurWork"
        android:gravity="center"
        android:layout_width="96dp"
        android:layout_height="76dp"
        android:layout_marginStart="98dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/our_work"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/colorPressedHighlight"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:rippleColor="#C6D535"/>

    <Button
        android:id="@+id/btnAboutUs"
        android:gravity="center"
        android:layout_width="98dp"
        android:layout_height="76dp"
        android:layout_marginStart="196dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/about_us"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/colorPressedHighlight"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:rippleColor="#C6D535"/>

    <Button
        android:id="@+id/btnContactUs"
        android:gravity="center"
        android:layout_width="112dp"
        android:layout_height="76dp"
        android:layout_marginStart="296dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/contact_us"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/colorPressedHighlight"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:rippleColor="#C6D535"/>

    <ImageView
        android:id="@+id/imgWhatsappDog"
        android:layout_width="150dp"
        android:layout_height="115dp"
        android:layout_marginStart="130dp"
        android:contentDescription="@string/doglogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        app:srcCompat="@drawable/whatsapp_dog"/>

    <Button
        android:id="@+id/btnWhatsApp"
        android:gravity="center"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginStart="120dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/whatsapp"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/colorPressedHighlight"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:rippleColor="#C6D535"/>

    <TextView
        android:id="@+id/product"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/product"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"/>

    <Button
        android:id="@+id/btnDigitalSignage"
        android:gravity="center"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/digital_signage"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/colorPressedHighlight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        app:rippleColor="#C6D535"/>

    <Button
        android:id="@+id/btnWifi"
        android:gravity="center"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/wifi_systems"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/colorPressedHighlight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72"
        app:rippleColor="#C6D535"/>

    <Button
        android:id="@+id/btnIPcam"
        android:gravity="center"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/IPcam_cctv_systems"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/colorPressedHighlight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78"
        app:rippleColor="#C6D535"/>

    <TextView
        android:id="@+id/technicalService"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/technical_service"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84"/>

    <Button
        android:id="@+id/btnManualsCatalog"
        android:gravity="center"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/manuals_catalog"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/colorPressedHighlight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91"
        app:rippleColor="#C6D535"/>

    <Button
        android:id="@+id/btnServiceHotline"
        android:gravity="center"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/service_hotline"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/colorPressedHighlight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:rippleColor="#C6D535"/>

</androidx.constraintlayout.widget.ConstraintLayout>